<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center" >
    
    <TextView
        android:id="@+id/passed_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:textSize="50sp" />
 
    <Button
        android:id="@+id/btn_bind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bind" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pause" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show" />

    <Button
        android:id="@+id/btn_unbind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_unbind" />

</LinearLayout>